Feature: Dump Namespace in debugger